--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "react-helmet": "6.1.0",
     "react-intl": "5.8.8",
     "react-redux": "7.2.2",
-    "react-router-dom": "6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "redis": "3.0.2",
     "redux": "4.0.5",
     "redux-saga": "1.1.3",
